--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /0x01-ES6_promise/node_modules/
 /0x01-ES6_promise/package-lock.json
 /0x00-ES6_basic/package-lock.json
+/0x02-ES6_classes/package-lock.json
+/0x02-ES6_classes/node_modules/
