--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /0x00-ES6_basic/package-lock.json
 /0x02-ES6_classes/package-lock.json
 /0x02-ES6_classes/node_modules/
+/0x03-ES6_data_manipulation/node_modules
+/0x03-ES6_data_manipulation/package-lock.json
